--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 16px;
+  font-size: 15px;
+}
+
+.MainApp {
+  height: 100vh;
+}
+.redColor{
+  color: red;
 }
